--- a/src/app/add-buff/add-buff.page.html
+++ b/src/app/add-buff/add-buff.page.html
@@ -13,7 +13,7 @@
 
   <mat-form-field class="name-buff" appearance="outline">
     <input matInput placeholder="Nome Buff" [(ngModel)]="buff.name" name="name">
-    <mat-icon matSuffix color="accent">playlist_add</mat-icon>
+    <mat-icon matSuffix color="accent">library_add</mat-icon>
   </mat-form-field>
 
   <mat-form-field class="name-buff">
