--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,7 +28,7 @@
             <span class="selected-pg"> {{ selection }} </span>
         </div>
         <button type="button" mat-icon-button style="position: absolute;right: 1rem;">
-            <mat-icon aria-label="face" (click)="characterStats($event)">face</mat-icon>
+            <mat-icon aria-label="face" (click)="characterStats($event)">menu_book</mat-icon>
         </button>
     </mat-toolbar>
 
