--- a/src/app/edit-buff/edit-buff.page.html
+++ b/src/app/edit-buff/edit-buff.page.html
@@ -13,7 +13,7 @@
 
   <mat-form-field class="name-buff" appearance="outline">
     <input matInput placeholder="Nome Buff" [(ngModel)]="buffToEdit.name" name="name_e">
-    <mat-icon matSuffix color="accent">playlist_add</mat-icon>
+    <mat-icon matSuffix color="accent">library_add</mat-icon>
   </mat-form-field>
 
   <mat-form-field class="name-buff">
