--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -56,7 +56,7 @@
                 <mat-grid-tile>
                     <mat-card class="normal-card-combat">
                         <mat-card-title [(ngModel)]="actualDamages" ngDefaultControl>
-                            Danni: <b>{{ actualWeaponDice }} {{actualDamages > 0 ? '+' : ''}}{{ actualDamages }}</b> </mat-card-title>
+                            Danni: <b>{{ actualWeaponDice }} {{actualDamages >= 0 ? '+' : ''}}{{ actualDamages }}</b> </mat-card-title>
 
                         <mat-card-footer>
                             <ng-container *ngFor="let buff of selectedCombatBuffs">
