--- a/src/app/edit-character/edit-character.page.scss
+++ b/src/app/edit-character/edit-character.page.scss
@@ -13,6 +13,14 @@ mat-drawer-container {
   overflow: auto;
 }
 
+mat-placeholder {
+  font-size: small;
+}
+
+mat-label {
+  font-size: small;
+}
+
 mat-tab {
   width: 100%;
 }
