--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,14 +6,16 @@
                 <mat-icon aria-label="close">close</mat-icon>
             </button>
         </mat-toolbar>
-        <mat-nav-list *ngFor="let c of allCharacters">
-            <a mat-list-item (click)="onSelChange(c); drawer.toggle()" [ngClass]="c === actualGameCharacter ? 'selected' : 'unselected'">
-                <mat-icon aria-label="face">face</mat-icon>
-                <mat-label style="padding-left: 5%">{{ c.name }}</mat-label>
-                <button class="edit-char-button" mat-icon-button (click)="editRoutine(drawer, $event, c)">
-                    <mat-icon>edit</mat-icon>
-                </button>
-            </a>
+        <mat-nav-list>
+            <ng-container *ngFor="let c of allCharacters">
+                <a mat-list-item (click)="onSelChange(c); drawer.toggle()" [ngClass]="c === actualGameCharacter ? 'selected' : 'unselected'">
+                    <mat-icon aria-label="face">face</mat-icon>
+                    <mat-label style="padding-left: 5%">{{ c.name }}</mat-label>
+                    <button class="edit-char-button" mat-icon-button (click)="editRoutine(drawer, $event, c)">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                </a>
+            </ng-container>
         </mat-nav-list>
         <button mat-raised-button class="new-button" (click)="addCharacter(); drawer.toggle()" color="primary">
             Nuovo
