--- a/src/app/add-character/add-character.page.html
+++ b/src/app/add-character/add-character.page.html
@@ -62,9 +62,9 @@
         <tr class="row">
           <td class="column">
             <mat-form-field class="stat">
-              <mat-placeholder>
+              <mat-label>
                 FOR
-              </mat-placeholder>
+              </mat-label>
               <input matInput type="number" formControlName="secondCtrl" [(ngModel)]="character.characteristics.strength">
             </mat-form-field>
           </td>
